feat(meerkat): change localScope algorithm

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -317,6 +317,20 @@ added entries are more likely to be requested than older entries. That said,
 this can generally be set to a fairly low number for optimal results.
 
 .TP
+.B MEERKAT_FETCH_REMOTE_AUTHZ_ATTRS
+
+By default, when performing the remote password checking procedure (meaning
+authenticating a user whose password lies in another DSA), Meerkat DSA will
+also subsequently query that DSA for the clearance and uniqueIdentifier
+attributes, which will help with determining the authorizations of the user.
+In the future, this read may include more attributes.
+
+If this variable is set to 0, Meerkat DSA will not perform this second read.
+There is little reason to do this except for performance concerns (since this
+can slow down log-ins that use passwords in another DSA) or network congestion
+concerns.
+
+.TP
 .B MEERKAT_FORBID_ANONYMOUS_BIND
 
 If set to 1, anonymous binds are declined entirely.
@@ -1239,6 +1253,26 @@ OpenSSL can use to obtain a private key.
 If set to 1, Meerkat DSA will not chain any requests. If you expect to operate
 your DSA instance in isolation from all other DSAs, it is recommended to enable
 this (meaning that chaining would be disabled).
+
+.TP
+.B MEERKAT_REMOTE_PWD_LOCAL_SCOPE
+
+If set to 1, Meerkat DSA will only check remote passwords within a "local
+scope." In other words, if a user attempts to authenticate with a password, and
+the entry containing that password does not reside in this DSA, this DSA might
+attempt to check the asserted password with the correct DSA; in this case, if
+"locally-scoped" Meerkat DSA will only forward this password to the correct DSA
+if the correct DSA is "local" to this DSA.
+
+In Meerkat DSA, "local scope" is defined as the same country, DMD, or
+organization, as determined by the correspondent DSAs' Application Entity (AE)
+titles (for your DSA, this is determined by your signing certificate).
+More precisely, the algorithm starts from the next-to-last RDN in the DN of
+each AE title and removes RDNs from the end until an RDN contains either
+the `organizationName` or `dmdName` attributes, then the resulting
+distinguished name prefixes are compared; if no such RDN is found, the
+country is considered the "local scope" and comparison proceeds as described
+below.
 
 .TP
 .B MEERKAT_REMOTE_PWD_TIME_LIMIT
