fix(meerkat): log messages with no detail

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -443,11 +443,10 @@
     "failed_to_save@object_class": "Failed to save object class definition {{oid}} to database: {{e}}",
     "failed_to_save@context_type": "Failed to save context type definition to database: {{e}}",
     "failed_to_save@name_form": "Failed to save name_form definition to {{oid}} database: {{e}}",
-    "failed_to_cancel_ob": "Failed to mark operational binding as rejected in response to error: ",
-    "failed_to_update_gsr": "Failed to update governing structure rule for immediate superior: ",
-    "failed_to_remove_hp": "Failed to remove hierarchyParent attribute from deleted entry: ",
-    "failed_to_unbind": "Failed to unbind: ",
-    "failed_to_remove_subordinate": "Failed to remove subordinate DSE: ",
+    "failed_to_cancel_ob": "Failed to mark operational binding as rejected in response to error: {{e}}",
+    "failed_to_update_gsr": "Failed to update governing structure rule for immediate superior: {{e}}",
+    "failed_to_unbind": "Failed to unbind: {{e}}",
+    "failed_to_remove_subordinate": "Failed to remove subordinate DSE: {{e}}",
     "failed_to_bind_replicate_everything": "Failed to bind to shadow supplier DSA to establish shadowing agreement.",
     "failed_to_delete_prev_replicate_everything": "Failed to delete previous 'replicate everything' shadowing operational bindings. Falling back on trying to soft-delete them. Error was {{e}}",
     "failed_to_soft_delete_prev_replicate_everything": "Failed to soft-delete previous 'replicate everything' shadowing operational bindings, too. Aborting establishing the SOB. Error was: {{e}}",
