feat(meerkat): configurable lastUpdate dispute threshold

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -595,6 +595,24 @@ such that the file looks like this when opened in a text editor:
 .RE
 
 .TP
+.B MEERKAT_LAST_UPDATE_DISPUTE_THRESHOLD
+
+The number of seconds of difference between a shadowing peer's indicated
+lastUpdate time and the local DSA's lastUpdate time greater or equal to
+which is considered a dispute. At the time of writing, nothing is done other
+than that a warning is logged if the lastUpdate time between the correspondent
+DSAs is disputed.
+
+If you find that you are seeing error messages related to disputed lastUpdate
+times in your logs, but shadowing is working just fine, you can dial up this
+number until the issue is gone. Wildly differing lastUpdate times could be
+caused by servers having their times misconfigured.
+
+This defaults to 60, which means 60 seconds. By default, if the shadow
+supplier and consumer disagree on the lastUpdate time by more than 60 seconds,
+this warning message is logged.
+
+.TP
 .B MEERKAT_LCR_PARALLELISM
 
 If greater than 1, Meerkat DSA will make parallel requests in the
