feat(meerkat): require scrypt for passwords in setEntryPassword

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -277,5 +277,6 @@
     "shadow_update_non_empty_root_dse": "Shadow update attempted to modify the root DSE, which is not permitted.",
     "full_update_required": "Full update required for shadow operational binding {{obid}}, but an incremental update was requested.",
     "superior_knowledge_empty": "Superior knowledge attribute was empty. Cannot route this request.",
-    "ob_missing_initiator": "Missing initiator parameters."
+    "ob_missing_initiator": "Missing initiator parameters.",
+    "bad_algorithm_parameters": "Malformed or unacceptable parameters for algorithm with object identifier {{oid}}."
 }
