feat(meerkat): add secondary shadow update concurrency config

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -1325,6 +1325,21 @@ operations. If you are under regular brute-force attacks or are generally under
 resource strain, you may want to leave this feature disabled.
 
 .TP
+.B MEERKAT_SHADOW_SECONDARY_REPLICA_UPDATE_CONCURRENCY
+
+The maximum number of secondary replica updates that can be performed concurrently
+when this DSA receives a shadow update. When a shadow update is received from a
+supplier, this DSA will propagate the update to all of its secondary shadow
+consumers. This value controls how many of those updates can happen in parallel.
+
+This defaults to 2. Setting this to a higher value will allow more secondary
+replicas to be updated simultaneously, which can speed up propagation but may
+consume more network bandwidth and system resources. Setting this to 1 will
+update secondary replicas sequentially, which is slower but uses fewer resources.
+Setting this to 0 or a negative value is not recommended and may cause
+unexpected behavior.
+
+.TP
 .B MEERKAT_REQUEST_CROSS_REFERENCES
 
 If set to 1, Meerkat DSA will request cross references from other DSAs, and,
