feat(meerkat): make total refresh deletion page size configurable

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -1340,6 +1340,13 @@ Setting this to 0 or a negative value is not recommended and may cause
 unexpected behavior.
 
 .TP
+.B MEERKAT_SHADOW_TOTAL_REFRESH_DELETION_PAGE_SIZE
+
+The number of entries read per page when deleting entries not included in a total
+refresh from a shadow producer. Defaults to 100. Must be a positive integer.
+Concurrency multiplies the amount of simultaneous pagination through the database.
+
+.TP
 .B MEERKAT_REQUEST_CROSS_REFERENCES
 
 If set to 1, Meerkat DSA will request cross references from other DSAs, and,
