feat(meerkat): add config option for total refresh vertex creation concurrency

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -1347,6 +1347,14 @@ refresh from a shadow producer. Defaults to 100. Must be a positive integer.
 Concurrency multiplies the amount of simultaneous pagination through the database.
 
 .TP
+.B MEERKAT_SHADOW_TOTAL_REFRESH_VERTEX_CONCURRENCY
+
+Maximum number of subordinate vertexes processed concurrently when building a total
+refresh tree for shadow updates. Defaults to 4. Higher values speed up total
+refresh construction but use more resources; lower values or 1 reduce resource usage.
+0 or negative values are not recommended.
+
+.TP
 .B MEERKAT_REQUEST_CROSS_REFERENCES
 
 If set to 1, Meerkat DSA will request cross references from other DSAs, and,
