feat(meerkat): add xr upsert concurrency option

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -2625,6 +2625,13 @@ You should only disable TLS on the web admin console if you are using a reverse
 proxy that provides TLS.
 
 .TP
+.B MEERKAT_XR_UPSERT_CONCURRENCY
+
+The maximum number of cross references that may be upserted into the local DSAIT
+concurrently when applying received cross references during distributed
+operations. Must be a positive integer. Defaults to 5 if unset or invalid.
+
+.TP
 .B NODE_ENV
 
 This is a standard NodeJS-related environment variable. This should be set to
