--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -167,16 +167,15 @@
     "failed_to_establish_hob": "Failed to establish HOB with {{etype}}: {{e}}",
     "superior_must_specify_entryInfo": "Superior DSA must specify entryInfo to establish a new hierarchical operational binding.",
     "hob_invalid_entryInfo": "Entry info describes an entry that is invalid for this reason: {{e}}.",
-    "cert_path_invalid@arg": "Invalid certification path.",
-    "cert_path_invalid@result": "Invalid certification path.",
+    "cert_path_invalid": "Invalid certification path.",
     "invalid_key_usage": "Invalid key usage on the end-entity certificate used for cryptographic signature.",
     "invalid_pkup": "End-entity private key not permitted by the certificate's private key usage period.",
-    "invalid_signature@arg": "Invalid signature.",
-    "invalid_signature@result": "Invalid signature.",
+    "invalid_signature": "Invalid signature.",
+    "cert_path_required_signed": "Certification-path parameter is required when providing a signed argument, result, or error.",
     "cert_path_required_signed@arg": "Certification-path parameter is required when providing a signed argument.",
     "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result.",
-    "cert_path_issuedToThisCA@arg": "Certification-path CA certifications must use the issuedToThisCA field for CA certs.",
-    "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs.",
+    "cert_path_required_signed@error": "Certification-path parameter is required when providing a signed result.",
+    "cert_path_issuedToThisCA": "Certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "ob_type_unrecognized": "Operational binding type {{obtype}} not understood.",
     "ob_binding_id_identifier_changed": "Operation binding identifier cannot be changed for operational binding {{uuid}}.",
