--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -161,13 +161,18 @@
     "hob_invalid_entryInfo": "The potential superior DSA supplied entryInfo that describes an entry that is invalid for this reason: {{e}}.",
     "cert_path_invalid@arg": "COULD_BAN={{host}}; Invalid certification path for association {{aid}} on invocation {{iid}}. verifyCertPath() return code={{rc}}.",
     "cert_path_invalid@result": "Invalid certification path in result of invocation {{iid}} from access point {{ap}}.",
+    "cert_path_invalid@error": "Invalid certification path in error with invocation {{iid}} from access point {{ap}}.",
     "invalid_signature@arg": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}}.",
     "invalid_signature@result": "Invalid signature on result for invocation {{iid}} from access point {{ap}}.",
+    "invalid_signature@error": "Invalid signature on error for invocation {{iid}} from access point {{ap}}.",
     "invalid_signature@reqval": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}} discovered during request validation. If the target DSE resides here, the operation will fail. Error: {{e}}",
+    "invalid_signature@referral": "Invalid signature on referral returned from {{aet}}.",
     "cert_path_required_signed@arg": "COULD_BAN={{host}}; Certification-path parameter is required when providing a signed argument, but was missing from invocation {{iid}} from association {{aid}}.",
     "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
+    "cert_path_required_signed@error": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
     "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
     "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
+    "cert_path_issuedToThisCA@error": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
     "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "strong_cred_error@-1": "COULD_BAN={{host}}; Strong credentials invalid: Invalid signature",
     "strong_cred_error@-2": "COULD_BAN={{host}}; Strong credentials invalid: Revoked via OCSP",
@@ -504,5 +509,9 @@
     "checking_for_entry_in_nssr": "Checking if entry {{dn}} is already taken in non-specific subordinate DSA {{aet}}.",
     "subrequest_result_malformed": "Subrequest result for operation {{opid}} was malformed. {{e}}",
     "local_read_request": "Dispatching local read request with invocation ID {{iid}} for {{dn}}.",
-    "local_compare_request": "Dispatching local compare request with invocation ID {{iid}} asserting attribute type {{attr}} against {{dn}}."
+    "local_compare_request": "Dispatching local compare request with invocation ID {{iid}} asserting attribute type {{attr}} against {{dn}}.",
+    "inappropriate_referral": "Received referral for list or search operation {{opid}} from DSA {{dn}} when name resolution was completed, which is not allowed. Ignoring the response.",
+    "referral_parameter_malformed": "Referral parameter for operation {{opid}} from DSA {{aet}} was malformed. {{e}}",
+    "referral_no_access_points": "Referral parameter for operation {{opid}} from DSA {{aet}} had no access points. Ignoring this referral.",
+    "convert_dsa_referral_fail": "Failed to convert DSA referral to referral error for invocation {{iid}} for association {{aid}}: {{e}}"
 }
