feat(meerkat): option to follow only signed referrals

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -1214,6 +1214,14 @@ Create any requested subtree within the DIT
 .RE
 
 .TP
+.B MEERKAT_ONLY_FOLLOW_SIGNED_REFERRALS
+
+When set to 1 (the default), during chaining Meerkat DSA only follows
+referrals that are signed and whose signature verifies. Unsigned referrals and
+referrals with invalid signatures are skipped. When set to 0, unsigned referrals
+are also followed.
+
+.TP
 .B MEERKAT_OPEN_TOP_LEVEL
 
 If set to 1, Meerkat DSA will not apply any access controls to adding new
