feat(meerkat): make referral following ttl configurable

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -331,6 +331,14 @@ can slow down log-ins that use passwords in another DSA) or network congestion
 concerns.
 
 .TP
+.B MEERKAT_FOLLOW_REFERRAL_TTL
+
+When this DSA chains requests to other DSAs, an upstream DSA may return a
+referral. This option is a non-negative integer: how many times this DSA will
+follow such referrals before returning the referral to the client. Default is 0
+(do not follow referrals). Invalid or negative values are treated as 0.
+
+.TP
 .B MEERKAT_FORBID_ANONYMOUS_BIND
 
 If set to 1, anonymous binds are declined entirely.
