--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -513,5 +513,6 @@
     "inappropriate_referral": "Received referral for list or search operation {{opid}} from DSA {{dn}} when name resolution was completed, which is not allowed. Ignoring the response.",
     "referral_parameter_malformed": "Referral parameter for operation {{opid}} from DSA {{aet}} was malformed. {{e}}",
     "referral_no_access_points": "Referral parameter for operation {{opid}} from DSA {{aet}} had no access points. Ignoring this referral.",
-    "convert_dsa_referral_fail": "Failed to convert DSA referral to referral error for invocation {{iid}} for association {{aid}}: {{e}}"
+    "convert_dsa_referral_fail": "Failed to convert DSA referral to referral error for invocation {{iid}} for association {{aid}}: {{e}}",
+    "failed_group_member_check": "Failed to check group membership for group {{group}}: {{e}}"
 }
