feat(meerkat): new option to control retained used invoke ids

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -993,6 +993,14 @@ malicious search requests with a huge number of relaxations or tightenings to
 overwhelm your DSA with bogus search re-evaluations.
 
 .TP
+.B MEERKAT_MAX_USED_INVOKE_IDS
+
+Maximum number of recently used invoke IDs to retain before clearing the set.
+Used for outbound operations to avoid reuse; when exceeded, the set is cleared
+to limit memory. Non-negative integer. Default 10000. Invalid or negative
+values fall back to 10000.
+
+.TP
 .B MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING
 
 The integer representation of the minimum authentication level required for
