feat(meerkat): make log file buffer size configurable

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -768,6 +768,13 @@ log file.
 This has no effect if the \fBMEERKAT_LOG_FILE\fR environment variable is not set.
 
 .TP
+.B MEERKAT_LOG_FILE_BUFFER_SIZE
+
+Size in bytes of the in-memory buffer for the log file. Integer >= 1; default
+8192. Invalid or missing values use the default. Only applies when
+\fBMEERKAT_LOG_FILE\fR is set.
+
+.TP
 .B MEERKAT_LOG_JSON
 
 Setting this to 1 will cause log messages to be logged in JSON format instead
