feat(meerkat): make log file flush interval configurable

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -775,6 +775,13 @@ Size in bytes of the in-memory buffer for the log file. Integer >= 1; default
 \fBMEERKAT_LOG_FILE\fR is set.
 
 .TP
+.B MEERKAT_LOG_FILE_FLUSH_INTERVAL_MS
+
+Maximum milliseconds between flushes to the log file. Positive integer; default
+5000. Invalid or missing values use the default. Only applies when
+\fBMEERKAT_LOG_FILE\fR is set.
+
+.TP
 .B MEERKAT_LOG_JSON
 
 Setting this to 1 will cause log messages to be logged in JSON format instead
